--- a/_posts/TIL/2021-06-16-(backEnd)2021-06-16.md
+++ b/_posts/TIL/2021-06-16-(backEnd)2021-06-16.md
@@ -2,4 +2,4 @@
 - JAVA Persistance API
 - JAVA 진영의 ORM 기준 표준
 
-<img data-action="zoom" src='{{ "/image/blog.JPG" | relative_url }}' alt='relative'>
+<img data-action="zoom" src='{{ "/study/image/blog.JPG" | relative_url }}' alt='relative'>
