--- a/_posts/TIL/2021-06-16-(backEnd)2021-06-16.md
+++ b/_posts/TIL/2021-06-16-(backEnd)2021-06-16.md
@@ -1,5 +1,7 @@
 # JPA 구동방식
-- JAVA Persistance API
-- JAVA 진영의 ORM 기준 표준
 
 <img data-action="zoom" src='{{ "/study/image/blog.JPG" | relative_url }}' alt='relative'>
+
+1. Jpa는 Persistence 라는 클래스가 있다.
+2. persistence.xml이라는 설정정보를 읽어서 EntityManagerFactory 라는 클래스를 만든다.
+3. 그리고 필요할때 EntityManager라는걸 만들어 낸다.
