--- a/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
+++ b/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
@@ -5,3 +5,35 @@
 1. Jpa는 Persistence 라는 클래스가 있다.
 2. persistence.xml이라는 설정정보를 읽어서 EntityManagerFactory 라는 클래스를 만든다.
 3. 그리고 필요할때 EntityManager라는걸 만들어 낸다.
+
+# persistence 설정
+
+
+```java
+<?xml version="1.0" encoding="UTF-8"?>
+<persistence xmlns="http://xmlns.jcp.org/xml/ns/persistence"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/persistence http://xmlns.jcp.org/xml/ns/persistence/persistence_2_2.xsd"
+             version="2.2">
+
+    <persistence-unit name="hello">
+        <properties>
+            <!-- 필수속성 -->
+            <property name="javax.persistence.jdbc.driver" value="org.mariadb.jdbc.Driver" />
+            <property name="javax.persistence.jdbc.url" value="jdbc:mariadb://IP:PORT/" />
+            <property name="javax.persistence.jdbc.user" value="root" />
+            <property name="javax.persistence.jdbc.password" value="mariadb" />
+            <property name="hibernate.dialect" value="org.hibernate.dialect.MariaDB103Dialect"/>
+            <!-- 데이터 베이스 방언 jpa 특정 데이터 베이스에 종속 되지 않게 되어잇다. hibernate.dialect 가 디비에 종속되지 않도록 해준다. -->
+
+            <!-- 옵션 -->
+            <property name="hibernate.show_sql" value="true" />         <!-- 쿼리를 보여준다 -->
+            <property name="hibernate.format_sql" value="true" />       <!-- 쿼리를 이쁘게 보일수 있도록 만들어준다 -->
+            <property name="hibernate.use_sql_comments" value="true" /> <!-- 쿼리에 대한 주석 -->
+            <property name="hibernate.jdbc.batch_size" value="10"/>     <!-- 요사이즈만큼 한번에 네트워크로 모아서 디비에 저장한다. -->
+            <property name="hibernate.hbm2ddl.auto" value="create" />
+        </properties>
+
+    </persistence-unit>
+
+</persistence>
