--- a/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
+++ b/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
@@ -8,8 +8,7 @@
 
 # persistence 설정
 
-
-```java
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <persistence xmlns="http://xmlns.jcp.org/xml/ns/persistence"
              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -37,3 +36,59 @@
     </persistence-unit>
 
 </persistence>
+
+# persistence 설정
+
+```java
+package hellojpa;
+
+import javax.persistence.EntityManager;
+import javax.persistence.EntityManagerFactory;
+import javax.persistence.EntityTransaction;
+import javax.persistence.Persistence;
+
+public class JpaMain {
+    public static void main(String[] args){
+        EntityManagerFactory emf = Persistence.createEntityManagerFactory("hello"); // 파라메터로는 persistence unit name 을 넘겨야 한다.
+        // EntityManagerFactory 어플리 케이션 로딩시점에 딱 하나만 만들어야 된다.
+        EntityManager em = emf.createEntityManager();   // 고객이 들어와서 행위를 하고 나갈때 디비 커넥션을 날리고 커넥션을 종료시키는 작업 할때마다 만들어 주어야 한다.
+
+        EntityTransaction tx = em.getTransaction();
+        tx.begin();
+        // Jpa 에서는 트랜잭션이라는 모든 변경하는 데이터는 트렌젝션 안에서 해줘야 한다.
+
+        try {/*
+            // 신규은
+            Member member = new Member();
+            member.setId(1L);
+            member.setName("HelloA");
+
+            em.persist(member);*/
+
+            // 조회
+            // 엔티티 매니저를 자바 켈렉션으로 생각하고 사용한다.
+            Member findMember = em.find(Member.class, 1L);
+            System.out.println("findMember.id : "+findMember.getId());
+            System.out.println("findMember.Name : "+findMember.getName());
+
+            // 삭제
+            em.remove(findMember);
+
+            // 수정
+            // 자바 컬렉션 처럼 사용하기때문에 persist 메소드를 사용하지 않더라도 update 쿼리가 나간다.
+            findMember.setName("HelloJPA");
+            tx.commit();        // 정상적이면 커밋
+
+            // 주의
+            // 엔티티 메니저 펙토리는 하나만 생성해서 어플리 케이션전체에서 공유한다. DB당 하나
+            // 엔티티 매니저는 쓰레드간에 공유 x
+            // JPA의 모든 데이터 변경 은 트랜잭션 안에서 실행
+        }catch (Exception e){
+            tx.rollback();      // 애러가 나면 rollback;
+        }finally {
+            em.close();
+        }
+
+        emf.close();        // 전체 어플리케이션이 띁나면 닫아준다
+    }
+}
