--- a/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
+++ b/_posts/TIL/2021-07-06-(JPA)2021-07-06.md
@@ -44,20 +44,19 @@
 public class JpaMain {
     public static void main(String[] args){
         EntityManagerFactory emf = Persistence.createEntityManagerFactory("hello"); // 파라메터로는 persistence unit name 을 넘겨야 한다.
-        // EntityManagerFactory 어플리 케이션 로딩시점에 딱 하나만 만들어야 된다.
+                                                                                    // EntityManagerFactory 어플리 케이션 로딩시점에 딱 하나만 만들어야 된다.
         EntityManager em = emf.createEntityManager();   // 고객이 들어와서 행위를 하고 나갈때 디비 커넥션을 날리고 커넥션을 종료시키는 작업 할때마다 만들어 주어야 한다.
 
         EntityTransaction tx = em.getTransaction();
-        tx.begin();
-        // Jpa 에서는 트랜잭션이라는 모든 변경하는 데이터는 트렌젝션 안에서 해줘야 한다.
-
-        try {/*
+        tx.begin();             // Jpa 에서는 트랜잭션이라는 모든 변경하는 데이터는 트렌젝션 안에서 해줘야 한다.
+       
+        try {
             // 신규은
             Member member = new Member();
             member.setId(1L);
             member.setName("HelloA");
 
-            em.persist(member);*/
+            em.persist(member);     // 저장시 persist 메소드
 
             // 조회
             // 엔티티 매니저를 자바 켈렉션으로 생각하고 사용한다.
@@ -66,11 +65,10 @@ public class JpaMain {
             System.out.println("findMember.Name : "+findMember.getName());
 
             // 삭제
-            em.remove(findMember);
+            em.remove(findMember);      // 삭제시 remove 메소드
 
             // 수정
-            // 자바 컬렉션 처럼 사용하기때문에 persist 메소드를 사용하지 않더라도 update 쿼리가 나간다.
-            findMember.setName("HelloJPA");
+            findMember.setName("HelloJPA");   // 자바 컬렉션 처럼 사용하기때문에 persist 메소드를 사용하지 않더라도 update 쿼리가 나간다.
             tx.commit();        // 정상적이면 커밋
 
             // 주의
