--- a/_posts/TIL/2021-07-14-(dom)2021-07-14.md
+++ b/_posts/TIL/2021-07-14-(dom)2021-07-14.md
@@ -1,6 +1,6 @@
 #  노드 개요
  
- 1. dom 은 자바스크립트 Node 객체의 계층화된 트리
+1. dom 은 자바스크립트 Node 객체의 계층화된 트리
 
 - html 문서 작성할때 html 콘텐츠를 다른 html 콘텐츠 내에 캡슐화 되게 되는데
 이를 트리로 표현 가능한 형태로 만들어진다.
@@ -34,7 +34,43 @@
 </html>
 ```
 
-- 결과
+결과
 <img data-action="zoom" src='{{ "/study/image/dom1.JPG" | relative_url }}' alt='relative'>
 
+- nodeType 값은 단지 특정한 JavaScript 인터페이스/생성자로부터 생성되는 노드의 유형을 기술하는데 사용되는 숫자 분류
 
+3. Node 개체로부터 상속받은 하위 노드 개체
+- 통상적인 DOM 트리의 각 노드 개체는 Node로부터 속성과 메소드를 상속받는다
+
+* 상속 순서
+- Object < Node < Element < HTMLElement (EX : HTML*Element)
+- Object < Node < CharacterData < Text 
+- Object < Node < Document < HTMLDocument
+- Object < Node < DocumentFragment
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<body>
+    <a href="#">Hi</a>  <!-- 상속받은 HTMLAnchorElement -->
+    <script>
+        // element 노드 개체에 대한 참조를 얻음
+        var nodeAnchor = document.querySelector("a");
+        
+        // element 노드 개체에 대한 속성 키를 저장하기 위한 props 배열을 생성
+        var props = [];
+
+        // element 노드 개체에 대해 루프를 돌면서 모든 속성 및 메서드 (상속받은 것을 얻어냄)
+        for(var key in nodeAnchor) {
+            props.push(key);
+        }
+
+        // 속성 및 메서드를 알파벳순으로 기록
+        console.log(props.sort());
+    </script>
+</body>
+
+</html>
+```
+모든 노드 유형이 Node 로 부터 상속 받는 것 뿐만 아니라 상속 체인이 길어 질 수 있다
+ex) HTMLAnchoroElement 노드는 HTMLElement, Element, Node, Object 개체로부터 속성 및 메서드를 상속 받는다
