네트워크 공부

--- a/_posts/TIL/2022-01-11-(인터넷 네트워크)2022.01.11.md
+++ b/_posts/TIL/2022-01-11-(인터넷 네트워크)2022.01.11.md
@@ -71,4 +71,36 @@ https://www.google.com/search?q=hello&hi=ko
 
 웹 브라우저 요청 흐름
 https://www.google.com/search?q=hello&hi=ko
-흐름은
+호출하게 되면
+
+dns에서 서버에서 아이피와 포트 번호를 알아낸다.
+그리고 http 요청 메시지를 생성한다
+
+GET / search?q=hello?Hi=ko HTTP/1.1
+Host:www.geogloe.com
+
+같이 요청 메시지를 만든다.
+
+1. 웹 브라우저가 HTTP 메시지 생성
+
+2. socket 라이브러리를 통해 전달
+   a : TCP/IP 연결 (IP, PORT)
+   b : 데이터 전달
+
+3. TCP/IP 패킷 생성 , HTTP 메시지 포함
+
+패킷 생성
+TCP/IP 패킷   출발지 IP, PORT , 목적지 IP , PORT
+HTTP 메시지    GET / search?q=hello?Hi=ko HTTP/1.1 Host:www.geogloe.com
+
+해서 상대방 서버에 전달한다
+전달하게 되면 서버에서 HTTP 메시지를 까서 응답메시지를 만들게된다
+
+HTTP/1.1 200 OK
+Content-TYPE : text/html;charset=UTF-8    Content-TYPE은 html 이고 charset 은 utf-8
+Content-Length: 4323    콘텐트 길이는 3423 
+
+
+
+
+
