인터넷 프로토콜 study

--- a/_posts/TIL/2022-01-18-(인터넷 네트워크)2022.01.18.md
+++ b/_posts/TIL/2022-01-18-(인터넷 네트워크)2022.01.18.md
@@ -73,3 +73,34 @@ Content-Length: 34
 - 리소스 조회
 - 서버에 전달하고 싶은 데이터는 query(쿼리 파라미터, 쿼리 스트링) 을 통해서 전달
 - 메시지 바디를 사용해서 데이터를 전달할 수 있자만, 지원하지 않는 곳이 많아서 권장하지 않음 
+
+POST
+POST /members HTTP/1.1 
+Content-Type: application/json
+{
+    "username" : "young" ,
+    "age" : "20"
+}
+
+HTTP/1.1 201 Created
+Content-Type: application/json
+Content-Length: 34
+Location: /members/100
+
+{
+    "username" : "young" ,
+    "age" : "20"
+}
+
+- 요청 데이터 처리
+- 메시지 바디를 통해 서버로 요청 데이터 전달
+- 서버는 요청 데이터를 처리
+ - 메시지 바디를 통해 들어온 데이터를 처리하는 모든 기능을 수행하낟
+ - 주로 전달된 데이터로 신규 리소스 등록, 프로세스 처리에 사용
+
+포스트 사용처
+ 1. 새 리소스 생성 (등록)
+   서버가 아직 식별하지 않은 새리소스를 생성
+ 2. 요청 데이터 처리
+   단순히 데이터를 생성하거나, 변경하는 것을 넘어서 프로세스를 처리해야 하는 경우
+   
