깨끗한코드

--- a/_posts/TIL/2022-05-22-(CleanCode)1.깨끗한 코드.md
+++ b/_posts/TIL/2022-05-22-(CleanCode)1.깨끗한 코드.md
@@ -8,8 +8,8 @@
 - 바쁠때는 나중에 다시 리팩토링하겠다고 다짐하지만 다음은 오지 않는다.
 
 - 나쁜 코드에 대가
-    - 생산성이 떨어진다.
-    - 비용이 더 들어간다.
+    생산성이 떨어진다.
+    비용이 더 들어간다.
 
 2. 태도
 어려운 요구사항, 일정, 마팅 등등 여러가지 이유로 바쁘다고 나쁜코드를 만드는 일은 모두 개발자의 탓이다.
