깨끗한코드

--- a/_posts/TIL/2022-05-22-(CleanCode)1.깨끗한 코드.md
+++ b/_posts/TIL/2022-05-22-(CleanCode)1.깨끗한 코드.md
@@ -1,7 +1,7 @@
 # 깨끗한 코드
 
-코드란 무엇인가? 
-코드는 요구사항을 표현하는 언어
+> 코드란 무엇인가? 
+> 코드는 요구사항을 표현하는 언어
 
 1. 나쁜코드
 - 일정에 쫒겨 나쁘게 구현한 코드는 개발자의 발목을 잡는다.
@@ -16,3 +16,4 @@
 나쁜코드의 위험을 알면서 깔끔한 코드를 유지하지 않는 행동은 전문가 답지 못한 행동이다.
 
 빨리 가능 유일한 방법은 언나 코드를 깨끗하게 유지하는 습관이다.
+
