--- a/_posts/CleanCode/2022-05-22-(CleanCode)2. 의미 있는 이름.md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)2. 의미 있는 이름.md
@@ -1,40 +1,167 @@
-# 깨끗한 코드
+# 의미 있는 이름
 
-> 코드란 ? 코드는 요구사항을 표현하는 언어
+1. 의도를 밝힌 이름
 
-1. 나쁜코드
+    - 의도가 분명한 이름이 정말 중요하다 (주석이 필요하다면 잘못된 변수이다)
 
-- 일정에 쫒겨 나쁘게 구현한 코드는 개발자의 발목을 잡는다.
-- 바쁠때는 나중에 다시 리팩토링하겠다고 다짐하지만 다음은 오지 않는다.
-- 나쁜 코드에 대가
-    생산성이 떨어진다.
-    비용이 더 들어간다.
+    ```java
+    // 잘못된 코드
+    int d; //경과 시간(단위: 날짜)
 
-2. 태도
+    // 좋은 코드
+    int daysSinceCreation;
+    ```
 
-    어려운 요구사항, 일정, 마팅 등등 여러가지 이유로 바쁘다고 나쁜코드를 만드는 일은 모두 개발자의 탓이다.
-    나쁜코드의 위험을 알면서 깔끔한 코드를 유지하지 않는 행동은 전문가 답지 못한 행동이다.
+2. 그릇된 정보를 피하라
 
-    빨리 가능 유일한 방법은 언나 코드를 깨끗하게 유지하는 습관이다.
+    - 나름대로 널리 쓰이는 의미가 있는 다른 의미로 사용해도 안된다.
+    ```java
+    //  getAccountList라 명명하면 컬렉션객체인 List 타입이 올 것이라고 추측하는데 다른 타입이 온다면 프로그래머에게 잘못된 정보를 제공. 
+    public Map<String, Object> getAccountList(){
+        return new HashMap();
+    }
+    ```
 
-3. 깨끗한 코드란 ?
+3. 의미있게 구분하라
 
-    - 깨끗한 코드는 한가지에 집중한다
-        나쁜 코드는 너무 많은 일을 하려 애쓰다가 의도가 뒤섞이고 목적이 흐려진다.
-    - 세세한 사항까지 꼼꼼하게 처리하는 코드이다.
-       메모리누수, 경쟁상태 , 일관없는 코드, 애러 처리 등등 꼼꼼히 처리해야한다.
-    - 잘 쓴 문장처럼 읽히는 가동성 있는 코드이다.
-        코드는 추측이 아니라 사실에 기반하여야 한다. 코드를 읽은 사람에게 프로그래머가 단호하다는 인상을 줘야한다.
-    - 테스트 케이스가 없는 코드는 깨끗한 코드가 아니다. 
-        아무리 가독성이 높아도 테스트 캐이스가 없으면 깨끗하지 않다.
-    - 중복성이 없는 코드를 작성하라
-        중복성, 표현력 높이기 간단한 추상화 고려하기 등등 
-    - 코드를 단순하게 보이게 만드는 것이 깔끔한 코드이다.
-        읽으면서 짐작한 대로 돌아가는 코드가 깨끗한 코드이다.
+    - 저자의 의미가 드러나는 코드로 고쳐라 (즉 정보를 제공할 수 있는 의미로)
+    ```java
+   //않좋은 코드
+    public static void copyChars(char a1[], char a2[]){
+        for (int i = 0; i < al. length; i++) {
+            a2[i] = a1[i];
+        }
+    }
 
-4. 결론
+    //좋은 코드
+    public static void copyChars(char source[], char destination[]){
+	for (int i = 0; i < al. length; i++) {
+		destination[i] = source[i];
+	}
+    ```
 
-    한꺼번에 많은 시간과 노력을 투자해 코드를 정리하는 코드가 아닌 지속적으로 깨끗한 코드에 대해 고민하며 깨끗한 코드를 만드는 것이
-    깨끗한 코드를 만드는 길이다.
+4. 발음하기 쉬운 이름을 사용하라
 
+    - 지적인 대화가 가능해지도록 한다
+     ```java
+   //않좋은 코드
+    class DtaRcrd102 {
+		private Date genymdhms;
+		private Date modymdhms;
+		private final String pszqint = "102";
+    };
+
+    //좋은 코드
+    class Customer {
+		private Date generationTimestamp;
+		private Date modificationTimestamp;
+		private final String recordld = "102";
+    }
+    ```
+
+5. 검색하기 쉬운 이름을 사용하라
+
+    - 문자 하나를 사용하는 이름과 상수는 텍스트 코드에 쉽게 눈에 띄지 않는다.
+
+     ```java
+   //않좋은 코드
+    for(int i = 0; i< 34; i++){
+    	s += (t[i]*4)/5;
+    }   
+
+    //좋은 코드
+    int realDaysPerldealDay = 4;
+    const int WORK_DAYS_PER_WEEK = 5;
+    int sum 0;
+    for (int i=0; i < NUMBER_OF_TASKS; i++) {
+        int realTaskDays = taskEstimate[i] * realDaysPerldealDay;
+        int realTaskWeeks = (realTaskDays / WORK_DAYS_PER_WEEK) ;
+        sum += realTaskWeeks;
+    }
+    ```
+
+6. 인코딩을 피하라
+
+7. 클래스 이름
+    - 클래스 이름은 명사나 명사구가 적합하다. ex) Customer, WikiPage, Account, Address
+
+8. 메서드 이름
+    - 메서드 이름은 동사나 동사구가 적합하다. ex) postPayment, deletePage, save
+    - 접근자(Accessor), 변경자(Mutator), 조건자(Predicate)는 값 앞에 get, set, is를 붙힌다.
+    - 생성자 중복정의시 정적 팩토리 메소드를 이용
+    ```java
+    //않좋은 코드
+    Complex fulcrumPoint = new Complex(23.0);
+
+    //좋은 코드
+    Complex fulcrumPoint = Complex.FromRealNumber(23.0);
+    ```
+    - 정적 펙토리 메서드란? 객체 생성의 역활을 하는 클래스 메스드이다.
+    ```java
+    // 빌드 패턴 
+    public class Complex {
+        private int xAxis; 
+        private int yAxis;
+
+        public Complex(int xAxis , int yAxis) {
+            this.xAxis = xAxis;
+            this.yAxis = yAxis;
+        }
+        public static void main(String[] args) {
+            Complex complex = new Complex(23, 0)
+        }
+    }
+
+    // 개발을 하다보면 매개변수가 하나일때는 쉽게 예상이 가겠지만 매개변수가 점점 늘어나고 복잽히지면 개발자가 생성자의 매개변수만 보고
+    // 어떤 객체를 반환할지 예측하는 것이 쉽지않다.
+
+    //정적 펙토리 메서드
+     public class Complex {
+        private int xAxis; 
+        private int yAxis;
+
+        public Complex(int xAxis , int yAxis) {
+            this.xAxis = xAxis;
+            this.yAxis = yAxis;
+        }
+
+        public static Complex FromRealNumber(int xAxis , int yAxis){
+            return new Complex(xAxis , yAxis)
+        }
+
+        public static void main(String[] args) {
+            Complex complex = Complex.FromRealNumber(23, 0)
+        }
+    }
+    ```
+
+    9. 기발한 이름은 피하라 
+        - 재미난 이름 보다 명료한 이름을 선택하라
+    
+    10. 한개념에 한 단어를 사용하라 
+        - 일관성 있는 어휘로 프로그래머에게 알려주도록 개발해라
+    
+    11. 한 단어에 두가지 목적으로 사용하지마라
+        - 일관성을 지킨다는 의미로 add라는 단어를 기존에는 두 값을 더한 값을 반환하거나 기존의 값에 새로운 값을 더해서 쓰다가 새로 작성하는 add에서는 집합에 값을 추가하는기능으로 사용한다면 일관성을 깨트린다. 차라리 insert나 append가 적당하다.
+
+    12. 해법 영역에서 가져온 이름을 사용해라
+        - 코드를 읽을 사람도 프로그래머 이다. 
+        - 전산용어, 알고르즘 이름, 수학용어 등을 사용해서 개발자들과 말을 하지않더라도 이게 무엇이겟구나 할 수 있도록 하자.
+
+    13. 문제 영역에서 가져온 이름을 사용해라
+        - 문제 영역에서 관련이 깊은 코드라면 문제영역에서 이름을 가져와라
+
+    14. 의미 잇는 맥락을 추가해라
+        - 클래스, 함수, 이름 공간에 부여해 맥락을 부여하는게 안된다면 접두사를 통해 맥락을 부여한다. 
+
+        firstName, lastName, street, houseNumber, city, state, zipcode
+
+        변수를 전체 보면 주소라는것을 알 수 있지만, 이 중 하나만 꺼내 사용한다면 주소의 일부라는 것을 알기 힘들다.  여기에 addr이라는 접두사를 붙힌다면 맥락을 좀 더 명확히 부여할 수 있다.
+
+        addrFirstName, addrLastName, addrStreet, addrHouseNumber, addrCity, addrState, addrZipcode
+
+    15. 결론
+
+        의미있는 이름만이 다른 개발자 들과 코드로 대화를 할수 있다.
+        
      
