--- a/_posts/CleanCode/2022-05-22-(CleanCode)3.함수..md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)3.함수..md
@@ -9,6 +9,7 @@
 2. 한가지만 해라
 
     - 함수는 한가지를 해야한다. 그 한가지를 잘 해야 한다.
+
     ```java
     public static String renderpageWithSetupsAndTeardowns(
 		PageData pageData, boolean iS5uite) throws Exception {
@@ -17,15 +18,15 @@
 		return pageData.getHtml();
     }
 
-    /*
-    이 함수내에서 수행되는 로직은 3가지 이다.
-    1.페이지가 테스트 페이지인지 판단.
-    2.그렇다면 설정 페이지와 해제 페이지를 넣는다.
-    3.페이지를 HTML로 렌더링해 반환한다. 
+    
+    //이 함수내에서 수행되는 로직은 3가지 이다.
+    //1.페이지가 테스트 페이지인지 판단.
+    //2.그렇다면 설정 페이지와 해제 페이지를 넣는다.
+    //3.페이지를 HTML로 렌더링해 반환한다. 
 
-    3개의 로직을 수행 하는데 세 로직 전부 동일한 추상화를 가지기에 한가지가 아니다
-    한가지 하라는 의미는 서로다른 추상화 수준을 가진 함수를 하나의 함수안에서 사용하지 마라
-    */
+    //3개의 로직을 수행 하는데 세 로직 전부 동일한 추상화를 가지기에 한가지가 아니다
+    //한가지 하라는 의미는 서로다른 추상화 수준을 가진 함수를 하나의 함수안에서 사용하지 마라
+    
 
     //높은 추상화 수준
     getHtml();
