--- a/_posts/CleanCode/2022-05-22-(CleanCode)3.함수..md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)3.함수..md
@@ -56,13 +56,11 @@
         }
     }
 
-    /*
-        문제점
-        1. 함수가 길며 새 유형이 추가되면 더 길어진다.
-        2. SRP(Single Responsiblity Principle)위반
-        3. OCP(Open Closed Principle)위반
-        4.한 가지 작업만 수행하지 않는다. 
-    */
+    // 문제점
+    // 1. 함수가 길며 새 유형이 추가되면 더 길어진다.
+    // 2. SRP(Single Responsiblity Principle)위반
+    // 3. OCP(Open Closed Principle)위반
+    // 4.한 가지 작업만 수행하지 않는다. 
 
     //좋은 코드
     public abstract class Employee {
@@ -90,11 +88,11 @@
         }
     }
 
-    /*
-        1. switch문을 EmplyeeFactory라는 추상 팩토리에 숨긴다. 
-        2. 메소드의 실제 실행은 Emplyee 인터페이스를 거쳐 다형성으로 맞는 로직이 수행된다.
-        3. 팩토리는 switch문을 통해 Employee 파생클래스의 인스턴스를 생성한다. 
-    */
+    
+    // 1. switch문을 EmplyeeFactory라는 추상 팩토리에 숨긴다. 
+    // 2. 메소드의 실제 실행은 Emplyee 인터페이스를 거쳐 다형성으로 맞는 로직이 수행된다.
+    // 3. 팩토리는 switch문을 통해 Employee 파생클래스의 인스턴스를 생성한다. 
+
     ```
 4. 서술적인 이름을 사용해라
 
