--- a/_posts/CleanCode/2022-05-22-(CleanCode)1.깨끗한 코드.md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)1.깨끗한 코드.md
@@ -1,40 +1,38 @@
 # 깨끗한 코드
 
-> 코드란 ? 코드는 요구사항을 표현하는 언어
+> ## 코드란 ?
+>
+> **코드는 요구사항을 표현하는 언어**
 
-1. 나쁜코드
+#####1. 나쁜코드
 
 - 일정에 쫒겨 나쁘게 구현한 코드는 개발자의 발목을 잡는다.
 - 바쁠때는 나중에 다시 리팩토링하겠다고 다짐하지만 다음은 오지 않는다.
 - 나쁜 코드에 대가
-    생산성이 떨어진다.
-    비용이 더 들어간다.
+  생산성이 떨어진다.
+  비용이 더 들어간다.
 
 2. 태도
 
-    어려운 요구사항, 일정, 마팅 등등 여러가지 이유로 바쁘다고 나쁜코드를 만드는 일은 모두 개발자의 탓이다.
-    나쁜코드의 위험을 알면서 깔끔한 코드를 유지하지 않는 행동은 전문가 답지 못한 행동이다.
+   어려운 요구사항, 일정, 마팅 등등 여러가지 이유로 바쁘다고 나쁜코드를 만드는 일은 모두 개발자의 탓이다.
+   나쁜코드의 위험을 알면서 깔끔한 코드를 유지하지 않는 행동은 전문가 답지 못한 행동이다.
 
-    빨리 가능 유일한 방법은 언나 코드를 깨끗하게 유지하는 습관이다.
-
+   빨리 가능 유일한 방법은 언나 코드를 깨끗하게 유지하는 습관이다.
 3. 깨끗한 코드란 ?
 
-    - 깨끗한 코드는 한가지에 집중한다
-        나쁜 코드는 너무 많은 일을 하려 애쓰다가 의도가 뒤섞이고 목적이 흐려진다.
-    - 세세한 사항까지 꼼꼼하게 처리하는 코드이다.
-       메모리누수, 경쟁상태 , 일관없는 코드, 애러 처리 등등 꼼꼼히 처리해야한다.
-    - 잘 쓴 문장처럼 읽히는 가동성 있는 코드이다.
-        코드는 추측이 아니라 사실에 기반하여야 한다. 코드를 읽은 사람에게 프로그래머가 단호하다는 인상을 줘야한다.
-    - 테스트 케이스가 없는 코드는 깨끗한 코드가 아니다. 
-        아무리 가독성이 높아도 테스트 캐이스가 없으면 깨끗하지 않다.
-    - 중복성이 없는 코드를 작성하라
-        중복성, 표현력 높이기 간단한 추상화 고려하기 등등 
-    - 코드를 단순하게 보이게 만드는 것이 깔끔한 코드이다.
-        읽으면서 짐작한 대로 돌아가는 코드가 깨끗한 코드이다.
-
+   - 깨끗한 코드는 한가지에 집중한다
+     나쁜 코드는 너무 많은 일을 하려 애쓰다가 의도가 뒤섞이고 목적이 흐려진다.
+   - 세세한 사항까지 꼼꼼하게 처리하는 코드이다.
+     메모리누수, 경쟁상태 , 일관없는 코드, 애러 처리 등등 꼼꼼히 처리해야한다.
+   - 잘 쓴 문장처럼 읽히는 가동성 있는 코드이다.
+     코드는 추측이 아니라 사실에 기반하여야 한다. 코드를 읽은 사람에게 프로그래머가 단호하다는 인상을 줘야한다.
+   - 테스트 케이스가 없는 코드는 깨끗한 코드가 아니다.
+     아무리 가독성이 높아도 테스트 캐이스가 없으면 깨끗하지 않다.
+   - 중복성이 없는 코드를 작성하라
+     중복성, 표현력 높이기 간단한 추상화 고려하기 등등
+   - 코드를 단순하게 보이게 만드는 것이 깔끔한 코드이다.
+     읽으면서 짐작한 대로 돌아가는 코드가 깨끗한 코드이다.
 4. 결론
 
-    한꺼번에 많은 시간과 노력을 투자해 코드를 정리하는 코드가 아닌 지속적으로 깨끗한 코드에 대해 고민하며 깨끗한 코드를 만드는 것이
-    깨끗한 코드를 만드는 길이다.
-
-     
+   한꺼번에 많은 시간과 노력을 투자해 코드를 정리하는 코드가 아닌 지속적으로 깨끗한 코드에 대해 고민하며 깨끗한 코드를 만드는 것이
+   깨끗한 코드를 만드는 길이다.
