--- a/_posts/CleanCode/2022-05-22-(CleanCode)1.깨끗한 코드.md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)1.깨끗한 코드.md
@@ -4,13 +4,11 @@
 >
 > **코드는 요구사항을 표현하는 언어**
 
-#####1. 나쁜코드
+1. 나쁜코드
 
 - 일정에 쫒겨 나쁘게 구현한 코드는 개발자의 발목을 잡는다.
 - 바쁠때는 나중에 다시 리팩토링하겠다고 다짐하지만 다음은 오지 않는다.
-- 나쁜 코드에 대가
-  생산성이 떨어진다.
-  비용이 더 들어간다.
+- 나쁜 코드에 대가 생산성이 떨어진다. 비용이 더 들어간다.
 
 2. 태도
 
