--- a/_posts/CleanCode/2022-05-22-(CleanCode)6.객체와 자료구조.md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)6.객체와 자료구조.md
@@ -18,9 +18,11 @@
    	double getPercentFuelRemaining();
    }
    ```
-2. 코드로 의도를 표현하라!
 
-   - 좋은 함수나 변수를 통해의도를 표현하도록 하는것이 좋다.
+2. 자료/객체 비대칭
+
+   - 객체는 추상화 뒤로 자료를 숨긴 채 자료를 다루는 함수만 공개
+   - 자료구조는 자료를 그대로 공개하며 별다른 함수는 제공하지 않는다
 3. 좋은 주석
 
    - 법적인주석
