객체와 자료구조

--- a/_posts/CleanCode/2022-05-22-(CleanCode)6.객체와 자료구조.md
+++ b/_posts/CleanCode/2022-05-22-(CleanCode)6.객체와 자료구조.md
@@ -23,29 +23,113 @@
 
    - 객체는 추상화 뒤로 자료를 숨긴 채 자료를 다루는 함수만 공개
    - 자료구조는 자료를 그대로 공개하며 별다른 함수는 제공하지 않는다
-3. 좋은 주석
 
-   - 법적인주석
-   - 정보를 제공하는 주석
-   - 의도를 설명하는 주석
-   - 의미를 명료하게 밝히는 주석
-   - 결과를 경고하는 주석
-   - To-Do 주석
-4. 나쁜주석
+   - 절차적인 코드
+   ```java
+   public class Square { 
+      public Point topLeft; 
+      public double side;
+   }
 
-   - 주절거리는 주석
-   - 같은 이야기를 반복하는 주석
-   - 오해할 여지가 있는 주석
-   - 의무적으로 다는 주석
-   - 이력을 기록하는 주석
-   - 있으나 마나한 주석
-   - 위치를 표시하는 주석
-   - 닫는 괄호에 다는 주석
-   - 주석으로 처리한 코드
-   - Html정보
-   - 전역정보
-   - 너무 많은 정보
-   - 모호환 관계
+   public class Rectangle { 
+      public Point topLeft; 
+      public double height; 
+      public double width;
+   }
+
+   public class Circle { 
+      public Point center; 
+      public double radius;
+   }
+
+   public class Geometry {
+      public final double PI = 3.141592653589793;
+
+      public double area(Object shape) throws NoSuchShapeException {
+         if (shape instanceof Square) { 
+            Square s = (Square)shape; 
+            return s.side * s.side;
+         } else if (shape instanceof Rectangle) { 
+            Rectangle r = (Rectangle)shape; 
+            return r.height * r.width;
+         } else if (shape instanceof Circle) {
+            Circle c = (Circle)shape;
+            return PI * c.radius * c.radius; 
+         }
+         throw new NoSuchShapeException(); 
+      }
+   }
+    ```
+
+    만약 Geometry 클래스에 둘레 길이를 구하는 Perimeter() 함수를 추가하고 싶다면 
+    Geometry 클래스에 구현하면 된다.
+
+    - 객체 지향적인 코드
+
+    ```java
+   public class Square implements Shape { 
+      private Point topLeft;
+      private double side;
+
+      public double area() { 
+         return side * side;
+      } 
+   }
+
+   public class Rectangle implements Shape { 
+      private Point topLeft;
+      private double height;
+      private double width;
+
+      public double area() { 
+         return height * width;
+      } 
+   }
+
+   public class Circle implements Shape { 
+      private Point center;
+      private double radius;
+      public final double PI = 3.141592653589793;
+
+      public double area() {
+         return PI * radius * radius;
+      } 
+   }
+    ```
+
+    각 도형에 맞는 계산 메서드가 있으므로 각 도형 클래스에서 계산 로직을 구현하면 된다.
+
+    - 절차적인 코드는 기존 자료 구조를 변경하지 않으면서 새함수를 구현하기 쉽다.
+    - 객체지향 코드는 기존 함수를 변경하지 않으면서 새 클래스를 추가하기 쉽다.
+
+3. 디미터 법칙
+
+   - 모듈은 자신이 조족하난 객체의 속사정을 몰라야 한다.
+
+   ```java
+   public class Address { 
+      private String region; 
+      private String details; 
+      
+      public boolean isSeoulRegion() { 
+         return "서울".equals(region); 
+      } 
+   }
+
+   // 안좋은 코드
+   // 기차 충돌 이라고 한다 한줄에 기차처럼 보이기 때문에
+   final String ouputDir = ctxt.getOptions().getScratchDir().getAbsolutePath();
+
+   // 좋은 코드
+   Options options = ctxt.getOptions(); 
+   File scratchDir = options.getScratchDir();
+   final String ouputDir = scratchDir.getAbsolutePath();
+    ```
+4. 자료 전달 객체
+
+   - DTO 라고한다
+   - 데이터 베이스와 통신하거나 소켓에서 받은 메시지의 구문을 분석할때 유용하다.
+
 5. 결론
 
    주석을 쓴다는 이유는 결과론적으로 좋지못한 코드를 사용하고 있는 증거이다.
