--- a/_posts/CleanCode/2022-05-29-(CleanCode)12.동시성.md
+++ b/_posts/CleanCode/2022-05-29-(CleanCode)12.동시성.md
@@ -47,22 +47,8 @@
    한 스레드는 44을, 다른 스레드는 43를 가져간다. 
    한 스레드는 43을, 다른 스레드는 43를 가져간다.
    위의 getNextId() 메서드는 8개의 자바 byte-code로 변환되며, 이를 두 스레드에서 실행하게 되면 총 12,870개의 코드 조합을 낼 수 있다. 그 중 얼마 안 되는 몇몇 조합이 위의 3가지 결과 중 마지막 결과를 낳게 된다.   
-1. 
-- 설계는 의도한 대로 돌아가는 시스템을 내놓아야 한다.
-- 테스트를 철저희 거쳐 모든 테스트 케이스를 항상 통과하는 시스템을 만들어 놓아야 한다.
-- 테스트 케이스를 만들고 계속 돌려라 라는 간단하고 단순한 규칙을 따르면 시스템은 낮은 결합도와 높은 응집력 이라는 객체 지향 방법론이 지향하는 목표를 저절로 달성한다.
 
-2. 리펙터링
-- 코드를 정리하면서 시스템이 깨질 걱정할 필요가 없다 테스트 케이스가 있으니까
-- 중복을 없애라
-- 표현하라
-    2-1 좋은 이름을 선택해라.
-    2-2 함수와 클래스 크기를 줄인다.
-    2-3 표준 명칭을 사용한다.
-    2-4 단위 테스트 케이스를 꼼꼼히 작성한다.
-    2-5 표현력을 높이는 가장 중요한 방법은 노력이다.
-
-3. 클래스와 메서드 수를 최소로 줄여라
+3. 동시성 방어 원칙
  - 클래스 함수수를 줄이는 것도 중요하지만 더 중요한 것은
  테스트 케이스를 만들고 중복을제거하고 의도롤 표현하는 작업이 더중요하다.
   
